--- a/src/ims/UI/PizzaOrder.form
+++ b/src/ims/UI/PizzaOrder.form
@@ -53,7 +53,11 @@
                       </Group>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace min="0" pref="446" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <Component id="jlblTotal" min="-2" pref="86" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="txtTotalCost" min="-2" pref="124" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="79" max="-2" attributes="0"/>
                       <Component id="btnOrder" min="-2" pref="168" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -89,7 +93,11 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="277" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="btnOrder" min="-2" pref="71" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="btnOrder" alignment="3" min="-2" pref="71" max="-2" attributes="0"/>
+                  <Component id="txtTotalCost" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jlblTotal" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
               <EmptySpace pref="18" max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -188,6 +196,13 @@
             <StringItem index="3" value="Item 4"/>
           </StringArray>
         </Property>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="txtTotalCost">
+    </Component>
+    <Component class="javax.swing.JLabel" name="jlblTotal">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Total Cost:"/>
       </Properties>
     </Component>
   </SubComponents>
